[package]
name = "bifrost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.0.0", features = ["full"] }
log = "0.4"
env_logger = "*"
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
